# script-info

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
script_info/: core.py  reporting.py
script_info/cli/: main.py
script_info/collectors/: __init__.py  basic.py  hardware.py  network.py  security.py  software.py  storage.py
script_info/gui/: main.py
tests/: test_collectors.py  test_reporting.py
